welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:33: error: ')' expected but 'return' found.
		return 0
                ^max1020:36: error: Unmatched closing brace '}' ignored here
 }
 ^